2005-12-05  Crispin Flowerday  <gnome@flowerday.cx>

	* src/ephy-find-toolbar.c: (entry_changed_cb),
	(ephy_find_toolbar_request_close):

	Fix a compile warning, and don't bother requesting a close
	if the find bar is already closed

2005-12-05  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-tabs-menu.c: (tab_set_action_accelerator):
	
	Use sizeof() here.

2005-12-05  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-langs.c:
	
	Updated comment to refer to the schema autogeneration tool.

2005-12-05  Christian Persch  <chpe@cvs.gnome.org>

	* data/ui/epiphany-ui.xml:

	Remove a unused popup menu declaration.

2005-12-05  Christian Persch  <chpe@cvs.gnome.org>

	* data/glade/print.glade:
	* embed/print-dialog.c: (ephy_print_setup_dialog_new):

	Remove the paper selector from the print setup dialogue,
	we have one in the print dialogue already.

2005-12-05  Christian Persch  <chpe@cvs.gnome.org>

	* data/glade/certificate-dialogs.glade:
	* data/glade/epiphany.glade:
	* embed/mozilla/GtkNSSClientAuthDialogs.cpp:
	* embed/mozilla/GtkNSSDialogs.cpp:
	* src/pdm-dialog.c: (show_cookies_properties), (pdm_dialog_init):

	Fix spacings to be HIG compliant. Set window roles.

2005-12-05  Christian Persch  <chpe@cvs.gnome.org>

	* src/languages.h:

	Add "tt".

2005-12-05  Christian Persch  <chpe@cvs.gnome.org>

	* data/mime-types-permissions.xml:

	Add image/x-png type.

2005-12-05  Christian Persch  <chpe@cvs.gnome.org>

	* Makefile.am:

	Use --with-gecko in the distcheck configure args.

2005-12-04  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-find.c: (ephy_embed_find_set_selection):
	* embed/ephy-embed-find.h:
	* embed/mozilla/EphyFind.cpp:
	* embed/mozilla/EphyFind.h:
	* embed/mozilla/mozilla-embed-find.cpp:

	While in find mode, set the selection colour to "attention".

	* src/ephy-find-toolbar.c: (set_status), (clear_status),
	(tab_search_key_press_cb), (entry_key_press_event_cb),
	(entry_activate_cb), (set_focus_cb),