@@ -1,3 +1,9 @@
+2005-12-05  Christian Persch  <chpe@cvs.gnome.org>
+
+        * src/bookmarks/ephy-related-action.c: (node_destroyed_cb):
+	
+        Don't try to connect signals to the destroyed node!
+		
 2005-12-05  Crispin Flowerday  <gnome@flowerday.cx>
 
 	* src/ephy-find-toolbar.c: (entry_changed_cb),
